# DCASE-2026-Task5

./: .gitignore  README.md  pyproject.toml  requirements.txt
atae/: __init__.py  backfill_parsed_answer.py  bias_core.py  evaluate.py  inference.py  postprocess_predictions.py
data/: README.md
scripts/: run_pipeline.sh
